<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Guard</string>
    <string name="menu_name">Menu</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="kg_spass_passed">Recognised</string>
    <string name="fingerPrintSensorSupported">Support sensor</string>
    <string name="nofingerPrintSensorSupported">Not Support sensor</string>
    <string name="fingerPrintNotEnabled">FingerPrint is not enabled</string>
    <string name="spass_image_quality_skew_too_large">Swipe downwards</string>
    <string name="desc_list_item_icon">Item Icon</string>
    <string name="annouce_locked">Your application was locked. Please make your pattern to unlock!</string>
    <string name="dialog_title"> Please waite some second! </string>
    <string name="dialog_message"> Loading application .... </string>

    <string-array name="nav_drawer_items">
        <item>Application locker</item>
        <item>Hide photos</item>
        <item>Hide text notifications</item>
        <item>Smart locker</item>
        <item>Setting</item>
        <item>About</item>
    </string-array>
    <string-array name="Aplication_Friend_Mode">
        <item>com.sec.chaton</item>
        <item>com.android.contacts</item>
        <item>com.google.android.apps.docs</item>
        <item>com.dropbox.android</item>
        <item>com.google.android.gms</item>
        <item>com.google.android.apps.plus</item>
        <item>com.google.android.talk</item>
        <item>jp.naver.line.android</item>
        <item>com.samsung.android.app.memo</item>
        <item>com.android.mms</item>
        <item>com.sec.android.app.myfiles</item>
        <item>com.google.android.apps.plus</item>
        <item>com.android.vending</item>
        <item>com.facebook.katana</item>
        <item>com.skype.android</item>
        <item>com.zing.zalo</item>
        <item>com.viber.voip</item>
        <item>com.whatsapp</item>
    </string-array>
    <string-array name="Application_Kid_Mode">
        <item>com.android.contacts</item>
        <item>com.android.chrome</item>
        <item>com.dropbox.android</item>
        <item>com.google.android.gms</item>
        <item>com.google.android.apps.plus</item>
        <item>com.google.android.talk</item>
        <item>com.sec.android.app.sbrowser</item>
        <item>com.android.mms</item>
        <item>com.sec.android.app.myfiles</item>
        <item>com.google.android.apps.plus</item>
        <item>com.android.vending</item>
        <item>com.facebook.katana</item>
        <item>com.skype.android</item>
        <item>com.zing.zalo</item>
        <item>com.viber.voip</item>
        <item>com.whatsapp</item>
    </string-array>

    <array name="nav_drawer_icons">
        <item>@drawable/sliding_item2</item>
        <item>@drawable/sliding_item2</item>
        <item>@drawable/sliding_item3</item>
        <item>@drawable/sliding_item4</item>
        <item>@drawable/sliding_item5</item>
        <item>@drawable/sliding_item6</item>
    </array>

    <string name="ttitle_custome_mode">Customize mode</string>
    <string name="title_friend_mode">Friend mode</string>
    <string name="title_kid_mode">Kid mode</string>
    <string name="title_activate_uninstall">Activate</string>
    <string name="title_deactivate_uninstall">Deactivate</string>
    <string name="title_mode_selecttion">Mode selection</string>
    <string name="title_selected">Selected</string>
    <string name="title_current_mode">Current mode</string>
    <string name="title_settings">Configuration</string>
    <string name="descrip_kid_mode">Apps is protected for children</string>
    <string name="descrip_friend_mode">Apps is protected for friend</string>
    <string name="descrip_customize_mode">Select apps you want to protect</string>
    <string name="kid_mode_on">Activated Lock</string>
    <string name="kid_mode_off">Deactivated Lock</string>
    <string name="kid">Kid</string>
    <string name="friend">Friend</string>
    <string name="customize">Customize</string>
    <string name="txt_title_password">Password</string>
    <string name="txt_setup_password">Setup password</string>
    <string name="descip_low_security">Low security</string>
    <string name="txt_pattern">Pattern</string>
    <string name="txt_descrip_pattern">Draw your pattern</string>
    <string name="descrip_pattern">Medium security</string>
    <string name="txt_finger_print">Finger print</string>
    <string name="txt_header_finger_print">Make your finger print</string>
    <string name="txt_descrip_finger">Hight security</string>
    <string name="txt_hint_input_password">Input password</string>
    <string name="txt_finger_answer_tip">Finger print Security</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="ok_button">OK</string>
    <string name="zero">0</string>
    <string name="del">X</string>
    <string name="txt_security_type">Security type</string>
    <string name="txt_current_type">Current type</string>
    <string name="descrip_type">Password</string>
    <string name="title_time_lock">Time lock</string>
    <string name="title_uninstall_lock">Uninstallation</string>
    <string name="title_header_timelock">Setup time to lock apps</string>
    <string name="title_uninstall_timelock">Prevent Uninstall Guard</string>
    <string name="descrip_time_lock">30 minutes</string>
    <string name="title_theme_lock">Theme lock</string>
    <string name="title_header_theme">Change theme of application</string>
    <string name="descrip_theme">Light theme</string>
    <string name="txt_tip_pattern">Draw your patern</string>
    <string name="btn_cancel">CANCEL</string>
    <string name="btn_continue">CONTINUE</string>
    <string name="btn_confirm">CONFIRM</string>
    <string name="txt_tip_first_lunch">Welcome to Guard App</string>
    <string name="txt_hint_confirm_password">Confirm password</string>
    <string name="annouce_password_saving">Your password is saved!</string>
    <string name="annouce_input_password">Please input password first!</string>
    <string name="annouce_wrong_password">Wrong password! Please try again!</string>
    <string name="annouce_wrong_pattern">Sorry, your pattern was not correct</string>
    <string name="annouce_input_pattern">Please make your pattern first!</string>
    <string name="state_button_retry">RETRY</string>
    <string name="status_button">Great! Your pattern is correct</string>
    <string name="status_not_enough_nodes">Sorry, your pattern has less 4 nodes</string>
    <string name="annouce_not_support">This feature is not supported on this version</string>
    <string name="guide_add_protect">Do you want to add this application to Protected App?</string>
    <string name="un_lock">UnLock</string>
    <string name="default_kidmode">Set to default</string>
    <string name="default_friendmode">Set to default</string>
    <string name="all">All</string>
    <string name="tip_fingerprint">Place fingerprint on the home key to unlock</string>
    <string name="descrip_uninstall_status">Disable</string>
    <string name="txt_title_uninstall">Active uninstallation</string>
    <string name="title_setup_password">Setup password</string>
    <string name="about_version">1.0</string>
    <string name="about_development">About Development</string>
    <string name="about_team"></string>
    <string name="about_contactpoint"></string>
    <string name="notice_register_in_settings">Please register your finger print:\n\t\t\tSettings > Finger Scanner</string>
    <string name="swipe_downwards">Swipe downwards</string>
    <string name="kid_friend">Kid Mode or Friend Mode is actived </string>
    <string name="applocker_on">PerfectAppLock is on</string>
    <string name="applocker_off">PerfectAppLock is off</string>
    <string name="about_bt_vote">Vote 5* in Google Play</string>
    <string name="about_bt_localize">Help us localization</string>
    <string name="DialogManager_selectPIN">Select your PIN</string>
    <string name="DialogManager_confirmPIN">Confirm your PIN</string>

</resources>